disabled Werrror as latest jdk7u code produces warnings with bootstrap compiler

--- a/make/sun/rmi/rmi/Makefile
+++ b/make/sun/rmi/rmi/Makefile
@@ -29,7 +29,7 @@
 
 BUILDDIR = ../../..
 JAVAC_MAX_WARNINGS = true
-JAVAC_WARNINGS_FATAL = true
+#JAVAC_WARNINGS_FATAL = true
 JAVAC_LINT_OPTIONS = -Xlint:all,-deprecation
 PACKAGE = sun.rmi
 PRODUCT = sun
